<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="34dp"
    android:paddingBottom="32dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <RadioGroup
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="@dimen/pad_15">

            <RadioButton
                android:id="@+id/defaultTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="10dp"
                android:text="@string/default_theme"
                android:textColor="@color/splashtextcolor" />

            <RadioButton
                android:id="@+id/darkTheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="10dp"
                android:text="@string/dark_mode"
                android:textColor="@color/splashtextcolor" />

            <RadioButton
                android:id="@+id/lightheme"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="10dp"
                android:text="@string/light"
                android:textColor="@color/splashtextcolor" />

            <RadioButton
                android:id="@+id/auto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="10dp"
                android:text="@string/autobattery"
                android:textColor="@color/splashtextcolor" />

        </RadioGroup>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
