<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="34dp"
    android:paddingBottom="32dp">

    <ImageView
        android:id="@+id/imgdialog_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:src="@drawable/share_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvShareApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:gravity="center_horizontal"
        android:text="@string/share_app"
        android:textColor="@color/splashtextcolor"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgdialog_share" />

    <TextView
        android:id="@+id/tvSharedesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36.5dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="37.5dp"
        android:gravity="center"
        android:lineSpacingExtra="6sp"
        android:text="@string/would_you_like_to_share_this_app_with_your_friends_they_might_also_enjoy_this"
        android:textColor="@color/splashtextcolor"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShareApp" />

    <TextView
        android:id="@+id/tvShare"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/main_gradi_toolbar"
        android:gravity="center"
        android:paddingLeft="37dp"
        android:paddingRight="37dp"
        android:text="@string/shareapp"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSharedesc" />
</androidx.constraintlayout.widget.ConstraintLayout>
