<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutrootDailog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="280dp"
        app:cardBackgroundColor="#fbfdff"
        app:cardCornerRadius="16dp"
        app:cardElevation="24dp"
        app:cardUseCompatPadding="false">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clipToPadding="false"
            android:paddingTop="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgUpdateDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="centerInside" />

                <TextView
                    android:id="@+id/txtTitleAppUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:text="@string/update_app"
                    android:textColor="#000000"
                    android:textSize="19sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txtDescAppUpdate"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/please_update_the_app_to_enjoy_the_cool_new_features_we_have_added"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtBtnLater"
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/later"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <FrameLayout
                        android:id="@+id/layoutBtn"
                        android:layout_width="120dp"
                        android:layout_height="38dp"
                        android:layout_gravity="center"
                        android:background="@drawable/main_gradi_toolbar">

                        <TextView
                            android:id="@+id/txtBtnUpdate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center"
                            android:text="@string/update"
                            android:textColor="#fff"
                            android:textSize="14sp" />
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</FrameLayout>
