<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutrootDailog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="280dp"
        app:cardBackgroundColor="#fbfdff"
        app:cardCornerRadius="15dp"
        app:cardElevation="24dp"
        app:cardUseCompatPadding="false">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clipToPadding="false"
            android:paddingTop="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgAppRateDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="centerInside" />

                <TextView
                    android:id="@+id/txtTitleRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:gravity="center_horizontal"
                    android:text="@string/rate_the_app"
                    android:textColor="#000000"
                    android:textSize="19sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txtDescRate"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/if_you_enjoy_using_this_10app_it_would_be_great_if_10you_rate_us_on_store"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <FrameLayout
                    android:id="@+id/layoutBtn"
                    android:layout_width="150dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/main_gradi_toolbar">

                    <TextView
                        android:id="@+id/txtBtnRate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:text="@string/rateus"
                        android:textColor="#fff"
                        android:textSize="14sp" />
                </FrameLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</FrameLayout>
