<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Codeminers.allInOne.free.videodownloader.statussaver.fragments.SavedvideoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clWhatsappTipnew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/viewWhatsappTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/opentiktok"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/blue_button_selector"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:text="@string/how_to_save_moj_video"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clWhatsappTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgTipWhatsapp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="17dp"
            android:src="@drawable/ic_wa_drwr"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTipTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/whatsapp_status_saver"
            android:textColor="#2c3e50"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgTipWhatsapp" />

        <TextView
            android:id="@+id/txtTipDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="23dp"
            android:gravity="center"
            android:text="@string/find_all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTipTitle" />

        <ImageView
            android:id="@+id/imgCloseTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:src="@drawable/ic_close_wa_tip"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewWhatsappTip"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ecf0f1"
        app:layout_constraintTop_toBottomOf="@+id/clWhatsappTipnew" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabWaStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/viewWhatsappTip"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabSelectedTextColor="@color/tabSelectedIconColor"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:tabTextColor="@color/colorPrimary" />

    <RelativeLayout
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/viewpager"
        app:layout_constraintTop_toBottomOf="@+id/tabWaStatus" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView" />

</androidx.constraintlayout.widget.ConstraintLayout>